LayoutTests:

2007-08-11  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - tests and updated results for http://bugs.webkit.org/show_bug.cgi?id=13670
          <rdar://problem/5399619> Table misrender when one of the TDs has width=100%

        * fast/table/100-percent-cell-width-expected.checksum: Added.
        * fast/table/100-percent-cell-width-expected.png: Added.
        * fast/table/100-percent-cell-width-expected.txt: Added.
        * fast/table/100-percent-cell-width.html: Added.
        * fast/table/percent-widths-stretch-expected.checksum: Added.
        * fast/table/percent-widths-stretch-expected.png: Added.
        * fast/table/percent-widths-stretch-expected.txt: Added.
        * fast/table/percent-widths-stretch.html: Added.
        * fast/text/whitespace/026-expected.checksum:
        * fast/text/whitespace/026-expected.png:
        * fast/text/whitespace/026-expected.txt:
        * tables/mozilla/bugs/bug35662-expected.checksum:
        * tables/mozilla/bugs/bug35662-expected.png:
        * tables/mozilla/bugs/bug35662-expected.txt:
        * tables/mozilla/bugs/bug5799-expected.checksum:
        * tables/mozilla/bugs/bug5799-expected.png:
        * tables/mozilla/bugs/bug5799-expected.txt:
        * tables/mozilla/core/col_span-expected.checksum:
        * tables/mozilla/core/col_span-expected.png:
        * tables/mozilla/core/col_span-expected.txt:

2007-08-11  Darin Adler  <darin@apple.com>

        - added a bunch of missing layout test results

        * editing/style/font-family-with-space-expected.checksum: Added.
        * editing/style/font-family-with-space-expected.png: Added.
        * fast/dom/frame-loading-via-document-write-expected.checksum: Added.
        * fast/dom/frame-loading-via-document-write-expected.png: Added.
        * fast/encoding/xmacroman-encoding-test-expected.checksum: Added.
        * fast/encoding/xmacroman-encoding-test-expected.png: Added.
        * fast/frames/frame-navigation-expected.checksum: Added.
        * fast/frames/frame-navigation-expected.png: Added.
        * fast/frames/frame-set-whitespace-attributes-expected.checksum: Added.
        * fast/frames/frame-set-whitespace-attributes-expected.png: Added.
        * fast/frames/inline-object-inside-frameset-expected.checksum: Added.
        * fast/frames/inline-object-inside-frameset-expected.png: Added.
        * fast/html/keygen-expected.checksum: Added.
        * fast/html/keygen-expected.png: Added.
        * fast/images/pdf-as-image-landscape-expected.checksum: Added.
        * fast/images/pdf-as-image-landscape-expected.png: Added.
        * fast/inline-block/14498-positionForCoordinates-expected.checksum: Added.
        * fast/inline-block/14498-positionForCoordinates-expected.png: Added.

WebCore:

2007-08-11  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13670
          <rdar://problem/5399619> Table misrender when one of the TDs has width=100%

        Tests: fast/table/100-percent-cell-width.html
               fast/table/percent-widths-stretch.html

        * rendering/AutoTableLayout.cpp:
        (WebCore::AutoTableLayout::calcPrefWidths): Changed the value used instead of
        0% to avoid division by zero from 1% to less than 0.01%. Removed code that
        added 0.5px to non-percent widths when calculating the scaling factor. The
        latter change is covered by the percent-widths-stretch test, where the new
        results match both WinIE 7 and Firefox 3.



Canonical link: https://commits.webkit.org/19562@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25011 268f45cc-cd09-0410-ab3c-d52691b4dbfc